--- a/inner.css
+++ b/inner.css
@@ -69,7 +69,7 @@ ul#act li#login {
   margin-right: 0;
   color: #54c3bf;
 }
-ul#act li#login i{
+ul#act li#login i {
   color: #54c3bf;
 }
 footer {
@@ -318,7 +318,7 @@ ul#ftr li i {
   float: left;
   height: 100%;
   border-right: solid 1px #ddd;
-  box-sizing: border-box;s
+  box-sizing: border-box;
 }
 #sidebar img#logo {
   width: 80px;
@@ -444,7 +444,8 @@ input#phone {
   margin: 8px 0;
   font-weight: bold;
   font-size: 12px;
-  color: #666;width:100%;
+  color: #666;
+  width: 100%;
 }
 .radio-input {
   float: left;
