--- a/responsive.css
+++ b/responsive.css
@@ -2,7 +2,7 @@
 }
 @media only screen and (max-width: 800px) {
   .content {
-    width: 800px;
+    width: 100%;
   }
 }
 @media only screen and (max-width: 590px) {
